# git_mirror

./: .env_example  .gitattributes  .gitignore  .pre-commit-config.yaml  .pydoctest.json  .pylintrc  AGENTS.md  CHANGELOG.md  CODEX_NO_WRITE_ACCESS_NOTES.md  LICENSE  Makefile  README.md  basic_help.sh  basic_test.sh  basic_test_dry.sh  git_mirror.toml  github_cache.sqlite  graph.txt  mkdocs.yml  private_dictionary.txt  pyproject.toml  pyproject.toml.org  tmp_app_section.txt  tox.ini
.github/workflows/: build.yml  create_draft_release.yml  publish_to_pypi.yml  release.yml  tox.yml
dead_code/: cross_repo_sync.py
docs/: Design.md  README.md  TODO.md  architecture.md  changelog.md  configuration.md  installation.md  interfaces.md  release-process.md  usage.md
git_mirror/: __about__.py  __init__.py  __main__.py  bug_report.py  check_cli_deps.py  core.py  cross_repo_sync.py  custom_types.py  dummies.py  logging_config.py  manage_config.py  manage_git.py  manage_github.py  manage_gitlab.py  manage_poetry.py  manage_poetry.sh  manage_pypi.py  menu.py  pat_init.py  pat_init_gitlab.py  router.py  safe_env.py  services.py  types.py  ui.py  version_check.py
git_mirror/gui/: __init__.py  app.py
git_mirror/tui/: __init__.py  app.py
git_mirror/utils/: bug_report.py  check_cli_deps.py  credentials.py  file_system.py  logging_config.py  performance.py  safe_env.py  ui.py  version_check.py
old_docs/: Design.md  PRERELEASE_INSTRUCTIONS.md  README.md  TODO.md  license.md  read-the-docs.md  release-process.md  usage.md
on_hold/hack/: forwarding.py
scripts/: basic_help.sh  basic_test.sh  basic_test_dry.sh  entrypoint_help.sh  smoke_common.sh
spec/: CONTRIBUTING_TKINTER.md  GEMINI_SAYS.md  refocus.md  review.md  three_ways_for_ui.md
tests/: bench_startup.py  env_util.py  test_bug_report.py  test_cli.py  test_gh_command_to_method.py  test_load_sync.py  test_view.py
tests/test_config_ui/: test_ask.py  test_init.py  test_load.py
tests/test_git/: test_check_unpushed.py
tests/test_github/: test_gh_actions.py  test_gh_clone.py  test_gh_not_repo.py  test_gh_pull.py  test_gh_pypi_status.py  test_github.py
tests/test_gitlab/: test_gl_clone.py  test_gl_get_repos.py  test_gl_not_repo.py  test_gl_pipelines.py  test_gl_pull.py  test_gl_pypi_status.py
tests/test_repo_sync/: test_sync.py  test_sync_compare.py  test_sync_compare2.py  test_sync_copy_template_two.py
tests/tests_bot/test_run_git_mirror_gpt35/: test___main__.log.md  test___main__.py  test_bug_report.log.md  test_bug_report.py  test_check_cli_deps.log.md  test_check_cli_deps.py  test_cross_repo_sync.log.md  test_cross_repo_sync.py  test_custom_types.log.md  test_custom_types.py  test_dummies.log.md  test_dummies.py  test_file_system.log.md  test_file_system.py  test_logging_config.log.md  test_logging_config.py  test_main_validation.py  test_manage_config.log.md  test_manage_config.py  test_manage_git.log.md  test_manage_git.py  test_manage_github.log.md  test_manage_github.py  test_manage_poetry.log.md  test_manage_poetry.py  test_manage_pypi.log.md  test_manage_pypi.py  test_menu.log.md  test_menu.py  test_pat_init_gitlab.log.md  test_pat_init_gitlab.py  test_performance.log.md  test_performance.py  test_router.log.md  test_router.py  test_safe_env.py  test_version_check.log.md  test_version_check.py
tests/tests_human/: test_bug_report.py  test_cli.py  test_cli_smoke.py  test_core.py  test_credentials.py  test_dashboard.py  test_gh_command_to_method.py  test_load_sync.py  test_pat_init.py  test_selection.py  test_services.py  test_version_check.py  test_view.py
tests/tests_human/test_config_ui/: test_ask.py  test_init.py  test_load.py
tests/tests_human/test_git/: test_check_unpushed.py  test_safe_mutations.py
tests/tests_human/test_github/: test_gh_actions.py  test_gh_clone.py  test_gh_pull.py  test_gh_pypi_status.py  test_github.py
tests/tests_human/test_gitlab/: test_gl_get_repos.py  test_gl_not_repo.py  test_gl_pull.py  test_gl_pypi_status.py
tests/tests_human/test_repo_sync/: test_sync_compare_files.py
