[project]
name = "git_mirror"
version = "0.3.9"
description = "Make your local git repos look like github or gitlab. See readme for how this differs from the many other multi-repo tools."
authors = [
    {name = "Matthew Martin", email = "matthewdeanmartin@gmail.com"},
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
keywords = ["git", "gitlab", "github", "polyrepo" ]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "python-dotenv>=1.0.1,<2",
    "rich>=13.7.0,<14",
    "inquirer>=3.2.3,<4",
    "termcolor",
    "prettytable<4",
    "colorama>=0.4.6,<1",
    "colorlog>=6.8.0,<7",
    "PyGithub>=2.2.0",
    "python-gitlab>=4.4.0",
    "GitPython>=3.1.42",
    "httpx>=0.26.0,<1",
    "requests-cache>=1.2.0,<2",
    "toml>=0.10.2,<1",
    "tomlkit>=0.12.3,<1",
    "cli-tool-audit>=3.0.1",
]

[project.urls]
"Bug Tracker" = "https://github.com/matthewdeanmartin/git_mirror/issues"
"Change Log" = "https://github.com/matthewdeanmartin/git_mirror/blob/main/CHANGELOG.md"

[project.scripts]
git_mirror = 'git_mirror.__main__:main'
gl_mirror = 'git_mirror.__main__:main_gitlab'
gh_mirror = 'git_mirror.__main__:main_github'
sh_mirror = 'git_mirror.__main__:main_selfhosted'


[dependency-groups]
dev = ["black>=23.11.0", "pytest>=7.4.3", "pytest-cov>=4.1.0", "pytest-xdist>=3.5.0", "pytest-randomly>=3.15.0", "pytest-sugar>=0.9.7", "pytest-mock>=3.14.0", "pytest-network", "hypothesis>=6.96.0", "tox", "pylint>=3.0.2", "ruff>=0.1.9", "mypy>=1.8.0", "types-toml", "types-colorama", "types-tqdm", "pre-commit>=3.5.0", "metametameta", "interrogate>=1.5.0", "pydoctest>=0.1.22", "pdoc3>=0.10.0", "mdformat>=0.7.17", "linkcheckmd>=1.4.0", "codespell>=2.2.6", "pyenchant>=3.2.2"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

#
#[tool.hatch.build.targets.wheel.sources]
#"templates" = "git_mirror/templates"

[tool.hatch.build.targets.wheel]
packages = ["git_mirror"]
include = [
    "git_mirror/**/*.py",
    "git_mirror/py.typed",
    "/README.md", "LICENSE",
]

[tool.hatch.build.targets.sdist]
include = ["/README.md", "LICENSE", "/git_mirror"]


[tool.black]
line-length = 120
target-version = ['py39']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''




[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "test",
    "tests"
]
junit_family = "xunit1"
norecursedirs = ["vendor", "scripts"]
# don't know how to do this in toml
#addopts = "--strict-markers"
#markers =
#	slow: marks tests as slow (deselect with '-m "not slow"')
#	fast: marks tests as fast (deselect with '-m "not fast"')


[tool.isort]
default_section = "THIRDPARTY"
force_grid_wrap = 0
include_trailing_comma = true
known_first_party = ["git_mirror"]
line_length = 120
multi_line_output = 3
use_parentheses = true

[tool.ruff]
line-length = 1000

# Enable Pyflakes `E` and `F` codes by default.
select = ["E", "F",
    "D", # docs
    "UP", # pyupgrade
    "B", # bugbear
]
ignore = [
    "D301", # messes with doctests
    "E722",
    # only track structural problems with docstrings, not whitespace, nor missing
    "D200", "D212", "D415", "D411", "D205", "D102", "D103", "D100", "D107", "D101", "D104", "D105",
    "UP007", "UP038", # Not sure if | is well supported in lowever versions of python
    "UP035"
]

# Exclude a variety of commonly ignored directories.
exclude = [
    "dead_code",
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
per-file-ignores = { }

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Assume Python 3.10.
target-version = "py311"


[tool.ruff.lint.pydocstyle]
convention = "google"


[tool.scriv]
version = "literal: pyproject.toml: tool.poetry.version"
format = "md"
main_branches = "master, main, develop, dev"

[tool.coverage.report]
# Regexes for lines to exclude from consideration
exclude_also = [
    # Don't complain about missing debug-only code:
    "def __repr__",
    "if self\\.debug",
    # Don't complain if tests don't hit defensive assertion code:
    "raise AssertionError",
    "raise NotImplementedError",
    # Don't complain if non-runnable code isn't run:
    "if 0:",
    "if __name__ == .__main__.:",
    # Don't complain about abstract methods, they aren't run:
    "@(abc\\.)?abstractmethod",
]


