[project]
name = "git_mirror"
version = "2.0.0"
description = "Batch git operations across a folder of GitHub repositories. See readme for how this differs from the many other multi-repo tools."
authors = [
    {name = "Matthew Martin", email = "matthewdeanmartin@gmail.com"},
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
keywords = ["git", "github", "polyrepo" ]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    # config
    "python-dotenv>=1.0.1,<2",
    "keyring>=24,<26",
    "toml>=0.10.2,<1",
    "tomlkit>=0.12.3,<1",
    # ui
    "rich>=14.2.0",
    "inquirer>=3.2.3,<4",
    "textual>=8",
    # diagnostics
    "colorlog>=6.8.0,<7",
    # Git ergonomics
    "PyGithub>=2.2.0",
    "GitPython>=3.1.42",
    # version check
    "httpx>=0.26.0,<1",
    "requests-cache>=1.2.0,<2",
    # doctor tool
    "cli-tool-audit>=3.0.1",
]

[project.urls]
"Documentation" = "https://git-mirror.readthedocs.io/"
"Homepage" = "https://github.com/matthewdeanmartin/git_mirror"
"Source" = "https://github.com/matthewdeanmartin/git_mirror"
"Bug Tracker" = "https://github.com/matthewdeanmartin/git_mirror/issues"
"Change Log" = "https://github.com/matthewdeanmartin/git_mirror/blob/main/CHANGELOG.md"

[project.scripts]
git_mirror = 'git_mirror.__main__:main'
gh_mirror = 'git_mirror.__main__:main_github'
sh_mirror = 'git_mirror.__main__:main_selfhosted'
git_mirror_tui = 'git_mirror.tui.app:launch_tui'

[project.gui-scripts]
git_mirror_gui = 'git_mirror.gui.app:launch_gui'


[dependency-groups]
dev = [
    "jiggle-version>=2.1.0",
    "keepachangelog-manager-fork[all]>=6.5.0",
    "dont-be-lazy>=0.1.2; python_version >= '3.10'",
    "pydoc-fork>=3.0.0; python_version >= '3.10'",
    "mkdocs>=1.6.0",
    "mkdocstrings[python]>=0.26.0",

    "ty",
    "pip-audit",
    "black>=23.11.0",
    "pytest>=7.4.3",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.5.0",
    "pytest-randomly>=3.15.0",
    "pytest-sugar>=0.9.7",
    "pytest-mock>=3.14.0",
    "pytest-network",
    "hypothesis>=6.96.0",
    "tox",
    "pylint>=3.0.2",
    "ruff>=0.1.9",
    "mypy>=1.8.0",
    "types-toml",
    "types-tqdm",
    "pre-commit>=3.5.0",
    "metametameta",
    "interrogate>=1.5.0",
    "pydoctest>=0.1.22",
    "pdoc3>=0.10.0",
    "mdformat>=0.7.17",
    "linkcheckmd>=1.4.0",
    "codespell>=2.2.6",
    "pyenchant>=3.2.2",
    "zizmor>=1.4.1",
    "check-jsonschema>=0.33.3",
    "gha-update>=0.2.0,<0.3; python_version >= '3.12'",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

#
#[tool.hatch.build.targets.wheel.sources]
#"templates" = "git_mirror/templates"

[tool.hatch.build.targets.wheel]
packages = ["git_mirror"]
dev-mode-dirs = ["."]
include = [
    "git_mirror/**/*.py",
    "git_mirror/py.typed",
    "/README.md", "LICENSE",
]

[tool.hatch.build.targets.sdist]
include = ["/README.md", "LICENSE", "/git_mirror"]


[tool.black]
line-length = 120
target-version = ['py39']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''




[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "test",
    "tests"
]
junit_family = "xunit1"
norecursedirs = ["vendor", "scripts"]
markers = [
    "slow: startup benchmark and other slower-running tests",
]
# don't know how to do this in toml
#addopts = "--strict-markers"
#markers =
#	slow: marks tests as slow (deselect with '-m "not slow"')
#	fast: marks tests as fast (deselect with '-m "not fast"')


[tool.isort]
default_section = "THIRDPARTY"
force_grid_wrap = 0
include_trailing_comma = true
known_first_party = ["git_mirror"]
line_length = 120
multi_line_output = 3
use_parentheses = true

[tool.ruff]
line-length = 320
target-version = "py39"
# Exclude a variety of commonly ignored directories.
exclude = [
    "dead_code",
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

[tool.ruff.lint]
# Enable Pyflakes `E` and `F` codes by default.
select = ["E", "F",
    "D", # docs
    "UP", # pyupgrade
    "B", # bugbear
]
ignore = [
    "D301", # messes with doctests
    "E722",
    # only track structural problems with docstrings, not whitespace, nor missing
    "D200", "D212", "D415", "D411", "D205", "D102", "D103", "D100", "D107", "D101", "D104", "D105",
    "UP007", # Not sure if | is well supported in lowever versions of python
    "UP035"
]
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
# Exclude a variety of commonly ignored directories.


[tool.ruff.lint.pydocstyle]
convention = "google"


[tool.scriv]
version = "literal: pyproject.toml: tool.poetry.version"
format = "md"
main_branches = "master, main, develop, dev"

[tool.changelogmanager.versioning]
scheme = "semver"

[tool.changelogmanager.validation]
enforce_preamble = true
format = "auto"

[tool.changelogmanager.defaults]
error_format = "github"
commit_schema = "keepachangelog"
schema_version = "current"

[[tool.changelogmanager.components]]
name = "default"
changelog = "CHANGELOG.md"

[tool.coverage.report]
# Regexes for lines to exclude from consideration
exclude_also = [
    # Don't complain about missing debug-only code:
    "def __repr__",
    "if self\\.debug",
    # Don't complain if tests don't hit defensive assertion code:
    "raise AssertionError",
    "raise NotImplementedError",
    # Don't complain if non-runnable code isn't run:
    "if 0:",
    "if __name__ == .__main__.:",
    # Don't complain about abstract methods, they aren't run:
    "@(abc\\.)?abstractmethod",
]



[tool.uv.pip]
universal = true
